--- a/index.html
+++ b/index.html
@@ -1,13 +1,86 @@
 <!doctype html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="././src/components/assets/logo-bg.png" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>SKYLIGHT | KSA</title>
-  </head>
-  <body>
-    <div id="root"></div>
-    <script type="module" src="/src/main.jsx"></script>
-  </body>
+
+<head>
+  <!-- Basic Metadata -->
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Skylight KSA – Glass, IT & Civil Engineering Solutions</title>
+  <meta name="description"
+    content="Skylight KSA delivers premium Glass Work, IT Solutions, and Civil Engineering services across the Kingdom of Saudi Arabia. Enterprise quality, royal-grade craftsmanship." />
+  <meta name="keywords"
+    content="Skylight KSA, Skylight Saudi, Glass Work Saudi Arabia, Aluminum Work KSA, IT Solutions KSA, Civil Engineering KSA, Construction Company Saudi Arabia, Engineering Riyadh, Engineering Jeddah" />
+
+  <!-- Favicon -->
+  <link rel="icon" type="image/png" href="./src/components/assets/logo-bg.png" />
+
+  <!-- Canonical -->
+  <link rel="canonical" href="https://mz9201ju.github.io/skylight-ksa/#/" />
+
+  <!-- Robots -->
+  <meta name="robots" content="index, follow" />
+
+  <!-- Social Media / OpenGraph -->
+  <meta property="og:title" content="Skylight KSA – Glass, IT & Civil Engineering Solutions" />
+  <meta property="og:description"
+    content="Premium engineering solutions in Saudi Arabia including glass, IT infrastructure, and civil construction." />
+  <meta property="og:image" content="https://mz9201ju.github.io/skylight-ksa/#/logo-bg.png" />
+  <meta property="og:url" content="https://mz9201ju.github.io/skylight-ksa/#/" />
+  <meta property="og:type" content="website" />
+
+  <!-- Twitter Card -->
+  <meta name="twitter:card" content="summary_large_image" />
+  <meta name="twitter:title" content="Skylight KSA – Engineering Excellence" />
+  <meta name="twitter:description" content="Glass, IT, and Civil Engineering services across Saudi Arabia." />
+  <meta name="twitter:image" content="https://mz9201ju.github.io/skylight-ksa/#/logo-bg.png" />
+  <meta name="twitter:site" content="@skylightGCC" />
+
+  <!-- Social Media Profiles -->
+  <link rel="me" href="https://www.youtube.com/@skylightGCC" />
+  <link rel="me" href="https://www.instagram.com/skylightGCC" />
+  <link rel="me" href="https://www.linkedin.com/company/skylightksa" />
+  <link rel="me" href="https://www.x.com/skylightGCC" />
+
+  <!-- Performance: Preload / Preconnect -->
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link rel="dns-prefetch" href="https://fonts.googleapis.com">
+  <link rel="dns-prefetch" href="https://fonts.gstatic.com">
+
+  <!-- Manifest (optional) -->
+  <link rel="manifest" href="/manifest.json" />
+
+  <!-- JSON-LD Schema (Local Business) -->
+  <script type="application/ld+json">
+    {
+        "@context": "https://schema.org",
+        "@type": "LocalBusiness",
+        "name": "Skylight KSA",
+        "image": "https://mz9201ju.github.io/skylight-ksa/#/logo-bg.png",
+        "url": "https://mz9201ju.github.io/skylight-ksa",
+        "logo": "https://mz9201ju.github.io/skylight-ksa/#/logo.png",
+        "description": "Premium Glass, IT, and Civil Engineering solutions across the Kingdom of Saudi Arabia.",
+        "address": {
+            "@type": "PostalAddress",
+            "addressCountry": "SA",
+            "addressLocality": "Riyadh"
+        },
+        "sameAs": [
+            "https://www.youtube.com/@skylightGCC",
+            "https://www.instagram.com/skylightGCC",
+            "https://www.linkedin.com/company/skylightksa",
+            "https://www.x.com/skylightGCC"
+        ]
+    }
+    </script>
+
+  <!-- Theme color -->
+  <meta name="theme-color" content="#1A3C40" />
+</head>
+
+<body>
+  <div id="root"></div>
+  <script type="module" src="/src/main.jsx"></script>
+</body>
+
 </html>
