fixed SEO links

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
   <link rel="icon" type="image/png" href="./src/components/assets/logo-bg.png" />
 
   <!-- Canonical -->
-  <link rel="canonical" href="https://mz9201ju.github.io/skylight-ksa/#/" />
+  <link rel="canonical" href="https://mz9201ju.github.io/skylight-ksa/" />
 
   <!-- Robots -->
   <meta name="robots" content="index, follow" />
@@ -24,15 +24,15 @@
   <meta property="og:title" content="Skylight KSA – Glass, IT & Civil Engineering Solutions" />
   <meta property="og:description"
     content="Premium engineering solutions in Saudi Arabia including glass, IT infrastructure, and civil construction." />
-  <meta property="og:image" content="https://mz9201ju.github.io/skylight-ksa/#/logo-bg.png" />
-  <meta property="og:url" content="https://mz9201ju.github.io/skylight-ksa/#/" />
+  <meta property="og:image" content="https://mz9201ju.github.io/skylight-ksa/logo-bg.png" />
+  <meta property="og:url" content="https://mz9201ju.github.io/skylight-ksa/" />
   <meta property="og:type" content="website" />
 
   <!-- Twitter Card -->
   <meta name="twitter:card" content="summary_large_image" />
   <meta name="twitter:title" content="Skylight KSA – Engineering Excellence" />
   <meta name="twitter:description" content="Glass, IT, and Civil Engineering services across Saudi Arabia." />
-  <meta name="twitter:image" content="https://mz9201ju.github.io/skylight-ksa/#/logo-bg.png" />
+  <meta name="twitter:image" content="https://mz9201ju.github.io/skylight-ksa/logo-bg.png" />
   <meta name="twitter:site" content="@skylightGCC" />
 
   <!-- Social Media Profiles -->
@@ -56,9 +56,9 @@
         "@context": "https://schema.org",
         "@type": "LocalBusiness",
         "name": "Skylight KSA",
-        "image": "https://mz9201ju.github.io/skylight-ksa/#/logo-bg.png",
+        "image": "https://mz9201ju.github.io/skylight-ksa/logo-bg.png",
         "url": "https://mz9201ju.github.io/skylight-ksa",
-        "logo": "https://mz9201ju.github.io/skylight-ksa/#/logo.png",
+        "logo": "https://mz9201ju.github.io/skylight-ksa/logo-bg.png",
         "description": "Premium Glass, IT, and Civil Engineering solutions across the Kingdom of Saudi Arabia.",
         "address": {
             "@type": "PostalAddress",
